--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,88 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
+}
+/* Estilos para el encabezado */
+.Newsletter {
+    background-color: #E8AF09;
+    text-align: center;
+    font-size: 14px;
+    padding: 1%;
+    padding-bottom: 0.1%;
+
+}
+
 .header {
-    width: 1500px;
-    height: 750px;
-    background-image: url(/imgs/team.avif);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 0;
+    background-color: white; 
+}
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+    margin: 0 auto;
+}
+
+/* Estilos del logo */
+.logo img {
+    height: 40px; 
+}
+
+/* Estilos del menú */
+.nav ul {
+    list-style: none;
+    display: flex;
+    gap: 20px; 
+}
+
+.nav ul li {
+    display: flex;
+    align-items: center;
+}
+
+.nav ul li a {
+    text-decoration: none;
+    color: #333;
+    font-size: 16px;
+    font-weight: bold;
+    transition: color 0.3s;
+}
+
+.nav ul li a:hover {
+    color: #E8AF09; 
+}
+
+
+/* Estilos del banner hero */
+.hero {
+    background: linear-gradient(rgba(170, 172, 175, 0.50),rgba(170,172,175,0.50)),url(/imgs/team.avif);
     background-size: cover;
     background-position: center;
-    font-size: 16px;
-    font-family: 'Montserrat', sans-serif;
-    color: #333333;
-    background-color: transparent;
-    
-}
-
-.wrapper {
+    color: #333;
+    padding: 60px 20px; 
     text-align: center;
+    height: 100vh; 
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100%;
 }
-    
 
-.h1 {
+.hero .wrapper {
+    margin-bottom: 20px; 
+}
+
+.hero .h1 {
     font-size: 70px; 
     color: #333; 
-    font-family: 'Montserrat', sans-serif; 
-    text-align: center; 
-    padding: 0;
-    line-height: 4;
-
-}
-
-.wrapper {
-    text-align: center;
+    line-height: 1.2;
 }
 
 .whatsapp-button {
@@ -39,88 +90,103 @@
     padding: 10px 20px;
     font-size: 18px;
     color: #fff;
-    background-color: goldenrod; 
+    background-color: #E8AF09; 
     border: none;
-    border-radius: 5px;
+    border-radius: 7px;
     text-decoration: none;
     transition: background-color 0.3s ease;
+    outline: none;
 }
+.whatsapp-button:focus, 
+.whatsapp-button:active {
+    outline: none;
+    box-shadow: none;
+}
+
 
 .whatsapp-button:hover {
-    background-color: goldenrod;
+    background-color: #E8AF09;
 }
 
-
-
-
-/*barra de navegación*/
-
+/* Sección SEO LAB */
 body {
-    
     font-size: 16px;
     font-family: 'Montserrat', sans-serif;
-    color: #333333;
-    background-color: whitesmoke;
-}
-
-.logo img {
-    height: 40px;
+    color: #333;
+    background-image: url(/imgs/AdobeStock_338389344.jpeg);
+    background-color: rgb(250, 250, 250);
     
 }
 
-.nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: 20px;
-    padding-left: 5%;
-    padding-right: 5%;
-    font-weight: bold;
+
+.text-box{
+    margin: 20px;
+}
+.h2-seo-lab{
+    font-size: 70px; 
+    color: #333; 
+    line-height: 1.2;
+    padding-top: 50px;
+
+}
+.p1{
+    justify-content: space-around;
+    padding-bottom: 16px; 
+}
+.p2{
+    justify-content: space-around;
+    padding-bottom: 50px;
+    
 }
 
-
-
-.menu {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    gap: 20px; 
+.img-container {
+    width: 100%; 
+    max-width: 1200px; 
+    margin: 0 auto; 
 }
 
-.menu li {
-    display: flex;
-    align-items: center;
+.img-banner {
+    width: 100%; 
+    height: auto; 
 }
 
-.menu a {
+.services-button {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 18px;
+    color: #fff;
+    background-color: #E8AF09; 
+    border: none;
+    border-radius: 7px;
     text-decoration: none;
-    color: #333;
-    font-size: 16px;
-    transition: color 0.3s ease;
+    transition: background-color 0.3s ease;
+    outline: none;
 }
 
-.menu a:hover {
-    color: goldenrod; 
+/*section Marcas*/
+
+.marcas {
+    font-size: 16px;
+    font-family: 'Montserrat', sans-serif;
+    color: #333;
+    
+    
 }
-/*section 5*/
-.gallery{
+
+.h3-marcas{ 
+    color: #333; 
+    padding-top: 50px;
+}
+.wrapper {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.gallery, .marcas, .contacto {
     font-size: 50px; 
     color: #333; 
-    font-family: 'Montserrat', sans-serif; 
-    text-align: center; 
-    padding: 0;
-    line-height: 4;
-
-}
-
-
-
-/*clients-bar*/
-.marcas {
-    font-size: 40px; 
-    color: #333; 
-    font-family: 'Montserrat', sans-serif; 
     text-align: center; 
     padding: 0;
     line-height: 4;
@@ -130,10 +196,10 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px; /* Espacio entre las imágenes */
-    padding: 20px;
+    gap: 10px;
+    padding: 10px;
     background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .clients-bar img {
@@ -142,16 +208,60 @@ body {
     width: 100%; 
     object-fit: contain; 
 }
-/*formulario*/
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+/*Sección servicios*/
+
+.servicios-home {
+    font-size: 70px;
+    margin-top: 120px;
+    margin-bottom: 80px; /
+    font-family: 'Montserrat', sans-serif;
+    color: #333;
 }
-.contacto {
-    font-size: 50px;
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, auto);
+    gap: 20px;
+    padding: 20px;
 }
+
+.grid-item {
+    background-color: #fff;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.grid-item img {
+    max-width: 50px; 
+    height: auto;
+    display: block;
+    margin: 0 auto; 
+    border-radius: 8px 8px 0 0;
+}
+
+.grid-item p {
+    margin-top: 10px;
+    font-size: 14px;
+    line-height: 1.5;
+}
+
+.grid-item h3 {
+    padding-top: 10px;
+}
+
+.on-page h3,
+.audit h3,
+.seo-content h3,
+.off-page h3,
+.tecnico h3,
+.local h3 {
+    padding: 5px;
+}
+
 .form-register {
     width: 400px;
     background-color: whitesmoke;
@@ -159,5 +269,159 @@ body {
     margin: auto;
     margin-top: 100px;
     border-radius: 4px;
+}
+.form-register{
+    
+    background: linear-gradient(rgba(5, 7, 12, 0.5), rgba(248, 249, 250, 0.5)), url(/imgs/AdobeStock_540660038.png);
+    background-size: cover;
+    background-position: center;
+    color: #333;
+    padding: 60px 20px; 
+    text-align: center;
+    height: auto; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+     align-items: center;
+   
+}
+
+/* Servicios */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
 }
+body {
+
+    background-image: url(/imgs/AdobeStock_338389344.jpeg);
+    background-color: rgb(250, 250, 250);
+    
+}
+
+/* Estilos para el encabezado */
+.Newsletter-services {
+    background-color: #E8AF09;
+    text-align: center;
+    font-size: 14px;
+    padding: 1%;
+    padding-bottom: 0.1%;
+}
+
+.header-services {
+    background-color: white;
+}
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+    margin: 0 auto;
+    padding: 20px 0; 
+}
+
+/* Estilos del logo */
+.logo-services img {
+    height: 40px; 
+}
+
+/* Estilos del menú */
+
+.nav-services{
+    font-family:'Montserrat', sans-serif ;
+}
+.nav-services ul {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+}
+
+.nav-services ul li {
+    display: flex;
+    align-items: center;
+}
+
+.nav-services ul li a {
+    text-decoration: none;
+    color: #333;
+    font-size: 16px;
+    font-weight: bold;
+    transition: color 0.3s;
+}
+
+.nav-services ul li a:hover {
+    color: #E8AF09; 
+}
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(78, 77, 77, 0.5); 
+    z-index: 2;
+    
+}
+
+.carousel-inner {
+    position: relative;
+}
+
+.carousel-control-prev, .carousel-control-next {
+    z-index: 3; 
+}
+.carousel-item img {
+    width: 100%;
+    height: auto; 
+}
+
+.carousel-caption {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 4; 
+    color: #fdefef; 
+    text-align: center;
+    pointer-events: none; 
+    
+}
+    .carousel-caption h1 {
+        font-size: 80px; 
+        font-family: 'Montserrat', sans-serif;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
+    }
+    
+    .carousel-caption h1 span {
+        display: block; 
+        font-size: 70px; 
+        font-weight: normal; 
+    }
+    .carousel-caption p {
+        font-size: 16px;
+        margin-bottom: 20px;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
+    }
+    
+    .carousel-caption .wrapper {
+        pointer-events: all; 
+    }
+    
+    .carousel-caption .contact-button {
+        display: inline-block;
+        padding: 10px 20px;
+        font-size: 16px;
+        color: #fff;
+        background-color: #E8AF09;
+        border: none;
+        border-radius: 7px;
+        text-decoration: none;
+        transition: background-color 0.3s ease;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
+    }
+    
+    .carousel-caption .contact-button:hover {
+        background-color: #d99708;
+    }
