--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
 }
+
 /* Estilos para el encabezado */
 .Newsletter {
     background-color: #E8AF09;
@@ -11,7 +12,10 @@
     font-size: 14px;
     padding: 1%;
     padding-bottom: 0.1%;
+}
 
+.Newsletter p {
+    background-color: #E8AF09;
 }
 
 .header {
@@ -19,7 +23,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px 0;
-    background-color: white; 
+    background-color: white;
 }
 
 .container {
@@ -32,14 +36,14 @@
 
 /* Estilos del logo */
 .logo img {
-    height: 40px; 
+    height: 40px;
 }
 
 /* Estilos del menú */
 .nav ul {
     list-style: none;
     display: flex;
-    gap: 20px; 
+    gap: 20px;
 }
 
 .nav ul li {
@@ -56,19 +60,18 @@
 }
 
 .nav ul li a:hover {
-    color: #E8AF09; 
+    color: #E8AF09;
 }
-
 
 /* Estilos del banner hero */
 .hero {
-    background: linear-gradient(rgba(170, 172, 175, 0.50),rgba(170,172,175,0.50)),url(/imgs/team.avif);
+    background: linear-gradient(rgba(170, 172, 175, 0.50), rgba(170, 172, 175, 0.50)), url(/imgs/team.avif);
     background-size: cover;
     background-position: center;
     color: #333;
-    padding: 60px 20px; 
+    padding: 60px 20px;
     text-align: center;
-    height: 100vh; 
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -76,33 +79,34 @@
 }
 
 .hero .wrapper {
-    margin-bottom: 20px; 
+    margin-bottom: 20px;
 }
 
 .hero .h1 {
-    font-size: 70px; 
-    color: #333; 
+    font-size: 70px;
+    color: #333;
     line-height: 1.2;
 }
 
+/* Botón de WhatsApp */
 .whatsapp-button {
     display: inline-block;
     padding: 10px 20px;
     font-size: 18px;
     color: #fff;
-    background-color: #E8AF09; 
+    background-color: #E8AF09;
     border: none;
     border-radius: 7px;
     text-decoration: none;
     transition: background-color 0.3s ease;
     outline: none;
 }
-.whatsapp-button:focus, 
+
+.whatsapp-button:focus,
 .whatsapp-button:active {
     outline: none;
     box-shadow: none;
 }
-
 
 .whatsapp-button:hover {
     background-color: #E8AF09;
@@ -115,39 +119,38 @@ body {
     color: #333;
     background-image: url(/imgs/AdobeStock_338389344.jpeg);
     background-color: rgb(250, 250, 250);
-    
 }
 
-
-.text-box{
+.text-box {
     margin: 20px;
 }
-.h2-seo-lab{
-    font-size: 70px; 
-    color: #333; 
+
+.h2-seo-lab {
+    font-size: 70px;
+    color: #333;
     line-height: 1.2;
     padding-top: 50px;
+}
 
-}
-.p1{
+.p1 {
     justify-content: space-around;
-    padding-bottom: 16px; 
+    padding-bottom: 16px;
 }
-.p2{
+
+.p2 {
     justify-content: space-around;
     padding-bottom: 50px;
-    
 }
 
 .img-container {
-    width: 100%; 
-    max-width: 1200px; 
-    margin: 0 auto; 
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 .img-banner {
-    width: 100%; 
-    height: auto; 
+    width: 100%;
+    height: auto;
 }
 
 .services-button {
@@ -155,7 +158,7 @@ body {
     padding: 10px 20px;
     font-size: 18px;
     color: #fff;
-    background-color: #E8AF09; 
+    background-color: #E8AF09;
     border: none;
     border-radius: 7px;
     text-decoration: none;
@@ -163,20 +166,25 @@ body {
     outline: none;
 }
 
-/*section Marcas*/
+.custom-separator {
+    width: 100%;
+    margin: 20px auto;
+    border: 0;
+    border-top: 2px solid #E8AF09;
+}
 
+/* Sección Marcas */
 .marcas {
     font-size: 16px;
     font-family: 'Montserrat', sans-serif;
     color: #333;
-    
-    
 }
 
-.h3-marcas{ 
-    color: #333; 
+.h3-marcas {
+    color: #333;
     padding-top: 50px;
 }
+
 .wrapper {
     text-align: center;
     display: flex;
@@ -184,10 +192,12 @@ body {
     align-items: center;
 }
 
-.gallery, .marcas, .contacto {
-    font-size: 50px; 
-    color: #333; 
-    text-align: center; 
+.gallery,
+.marcas,
+.contacto {
+    font-size: 50px;
+    color: #333;
+    text-align: center;
     padding: 0;
     line-height: 4;
 }
@@ -203,18 +213,16 @@ body {
 }
 
 .clients-bar img {
-    max-width: 100px; 
-    max-height: 100px; 
-    width: 100%; 
-    object-fit: contain; 
+    max-width: 100px;
+    max-height: 100px;
+    width: 100%;
+    object-fit: contain;
 }
 
-/*Sección servicios*/
-
+/* Sección Servicios */
 .servicios-home {
     font-size: 70px;
-    margin-top: 120px;
-    margin-bottom: 80px; /
+    margin: 120px 0 80px;
     font-family: 'Montserrat', sans-serif;
     color: #333;
 }
@@ -236,10 +244,10 @@ body {
 }
 
 .grid-item img {
-    max-width: 50px; 
+    max-width: 50px;
     height: auto;
     display: block;
-    margin: 0 auto; 
+    margin: 0 auto;
     border-radius: 8px 8px 0 0;
 }
 
@@ -262,28 +270,239 @@ body {
     padding: 5px;
 }
 
+/* Sección Reviews y Mapa */
+.reviews {
+    background-color: #f9f9f9;
+    padding: 40px 20px;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    margin: 40px 0;
+}
+
+.reviews-title {
+    font-size: 36px;
+    margin-bottom: 40px;
+    color: #333;
+}
+
+.review-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
+    justify-items: center;
+}
+
+.review-item {
+    background-color: #fff;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+.review-item p {
+    font-size: 16px;
+    color: #333;
+    margin-bottom: 10px;
+    line-height: 1.5;
+}
+
+.review-item h3 {
+    font-size: 18px;
+    color: #E8AF09;
+    margin-top: 0;
+    font-weight: bold;
+}
+
+/* Mapa */
+body,
+html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+}
+
+/* Sección Encuéntranos */
+.encuentranos {
+    font-size: 70px;
+    margin: 95px 0 80px;
+    text-align: center;
+}
+
+.mapouter {
+    position: relative;
+    text-align: right;
+    height: 80vh;
+    width: 100%;
+    display: flex;
+}
+
+.gmap_canvas {
+    overflow: hidden;
+    background: none !important;
+    height: 100%;
+    width: 100%;
+}
+
+#gmap_canvas {
+    height: 100%;
+    width: 100%;
+    border: 0;
+}
+
+/* Formulario y Footer */
+.main {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 20px;
+    padding: 20px;
+}
+
+
+.contenedor-forms {
+    background-image: url(/imgs/AdobeStock_540660038.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+.contenedor-forms h2 {
+    font-size: 70px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+.form-register {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-top: 40px;
+    gap: 10px;
+    background-color: #f9f9f9;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    width: 400px;
+    margin: 0;
+}
+
+.controls {
+    padding: 10px;
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+.controls:focus {
+    border-color: #E8AF09;
+    outline: none;
+}
+
+.submit {
+    background-color: #E8AF09;
+    color: white;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.submit:hover {
+    background-color: #D79F0E;
+}
+
 .form-register {
     width: 400px;
     background-color: whitesmoke;
     padding: 40px;
     margin: auto;
-    margin-top: 100px;
     border-radius: 4px;
 }
-.form-register{
-    
-    background: linear-gradient(rgba(5, 7, 12, 0.5), rgba(248, 249, 250, 0.5)), url(/imgs/AdobeStock_540660038.png);
-    background-size: cover;
-    background-position: center;
-    color: #333;
-    padding: 60px 20px; 
-    text-align: center;
-    height: auto; 
-    display: flex;
+
+/*footer*/
+.footer {
+    background-color: #333;
+    color: white;
+    padding: 20px;
+
+}
+
+.footer-content {
+    max-width: 1200px;
+    margin: 0 auto;
     flex-direction: column;
-    justify-content: center;
-     align-items: center;
-   
+    align-items: center;
+}
+
+.footer-logo {
+    align-self: flex-start;
+    margin-bottom: 10px;
+}
+
+.footer-menu {
+    margin: 20px 0;
+    align-self: flex-end;
+
+}
+
+.footer-menu ul {
+    list-style-type: none;
+    padding: 0;
+    text-align: right;
+
+}
+
+.footer-menu li {
+    margin: 5px 0;
+
+}
+
+.footer-designed {
+    font-size: 14px;
+    margin: 10px 0;
+}
+
+.footer p {
+    margin: 10px 0;
+}
+
+.footer a {
+    color: #E8AF09;
+    text-decoration: none;
+}
+
+.footer a:hover {
+    text-decoration: underline;
+}
+
+.social-media {
+    margin: 15px 0;
+    align-self: flex-end;
+}
+
+.social-media a {
+    margin: 0 10px;
 }
 
 /* Servicios */
@@ -293,11 +512,12 @@ body {
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
 }
+
 body {
 
     background-image: url(/imgs/AdobeStock_338389344.jpeg);
     background-color: rgb(250, 250, 250);
-    
+
 }
 
 /* Estilos para el encabezado */
@@ -307,6 +527,10 @@ body {
     font-size: 14px;
     padding: 1%;
     padding-bottom: 0.1%;
+}
+
+.Newsletter-services p {
+    background-color: #E8AF09;
 }
 
 .header-services {
@@ -319,19 +543,20 @@ body {
     align-items: center;
     width: 90%;
     margin: 0 auto;
-    padding: 20px 0; 
+    padding: 20px 0;
 }
 
 /* Estilos del logo */
 .logo-services img {
-    height: 40px; 
+    height: 40px;
 }
 
 /* Estilos del menú */
 
-.nav-services{
-    font-family:'Montserrat', sans-serif ;
+.nav-services {
+    font-family: 'Montserrat', sans-serif;
 }
+
 .nav-services ul {
     list-style: none;
     display: flex;
@@ -352,29 +577,33 @@ body {
 }
 
 .nav-services ul li a:hover {
-    color: #E8AF09; 
+    color: #E8AF09;
 }
+
 .overlay {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(78, 77, 77, 0.5); 
+    background-color: rgba(78, 77, 77, 0.5);
     z-index: 2;
-    
+
 }
+ /*boostrap*/
 
 .carousel-inner {
     position: relative;
 }
 
-.carousel-control-prev, .carousel-control-next {
-    z-index: 3; 
+.carousel-control-prev,
+.carousel-control-next {
+    z-index: 3;
 }
+
 .carousel-item img {
     width: 100%;
-    height: auto; 
+    height: auto;
 }
 
 .carousel-caption {
@@ -382,46 +611,310 @@ body {
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 4; 
-    color: #fdefef; 
+    z-index: 4;
+    color: #fdefef;
     text-align: center;
-    pointer-events: none; 
-    
+    pointer-events: none;
+
 }
-    .carousel-caption h1 {
-        font-size: 80px; 
-        font-family: 'Montserrat', sans-serif;
-        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
-    }
-    
-    .carousel-caption h1 span {
-        display: block; 
-        font-size: 70px; 
-        font-weight: normal; 
-    }
-    .carousel-caption p {
-        font-size: 16px;
-        margin-bottom: 20px;
-        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
-    }
-    
-    .carousel-caption .wrapper {
-        pointer-events: all; 
-    }
-    
-    .carousel-caption .contact-button {
-        display: inline-block;
-        padding: 10px 20px;
-        font-size: 16px;
-        color: #fff;
-        background-color: #E8AF09;
-        border: none;
-        border-radius: 7px;
-        text-decoration: none;
-        transition: background-color 0.3s ease;
-        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
-    }
-    
-    .carousel-caption .contact-button:hover {
-        background-color: #d99708;
-    }
+
+.carousel-caption h1 {
+    font-size: 80px;
+    font-family: 'Montserrat', sans-serif;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.carousel-caption h1 span {
+    display: block;
+    font-size: 70px;
+    font-weight: normal;
+}
+
+.carousel-caption p {
+    font-size: 16px;
+    margin-bottom: 20px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.carousel-caption .wrapper {
+    pointer-events: all;
+}
+
+.carousel-caption .contact-button {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #E8AF09;
+    border: none;
+    border-radius: 7px;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.carousel-caption .contact-button:hover {
+    background-color: #d99708;
+}
+
+.services-section {
+    padding: 40px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    background-image: url(/imgs/AdobeStock_338389344.jpeg);
+    background-color: #f9f9f9;
+}
+
+.services-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    max-width: 1200px;
+    margin: 0 auto;
+    width: 100%;
+}
+
+.services-column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.services-column h2 {
+    font-size: 50px;
+    margin: 20px;
+    font-weight: bold;
+    padding-top: 100px;
+}
+
+.services-column ol {
+    padding-left: 0;
+    list-style-type: disc;
+    margin: 20px;
+    text-align: left;
+}
+
+.services-column ol li {
+    margin-bottom: 10px;
+    transition: color 0.3s ease;
+    font-size: 30px;
+}
+
+.services-column ol li:hover {
+    color: #E8AF09;
+}
+
+.services-image-bottom {
+    max-width: 50px;
+    height: 50px;
+    margin: 20px auto;
+    display: block;
+}
+.custom-separator {
+    width: 100%;
+    margin: 20px auto;
+    border: 0;
+    border-top: 2px solid #E8AF09;
+}
+
+/*servicios detalles*/
+.services-section {
+    padding: 40px 20px;
+    background-color: #f9f9f9;
+    width: 100%;
+}
+
+.services-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.services-item {
+    display: contents;
+}
+
+.services-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 20px;
+    background-color: #ffffff;
+    border: 1px solid #dddddd;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.services-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.services-image img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
+}
+.cta-section {
+    padding: 40px 20px;
+    background-color: #f9f9f9;
+    text-align: center; 
+}
+
+.cta-section h2 {
+    font-size: 36px;
+    margin-bottom: 20px;
+}
+
+.cta-button {
+    display: inline-block;
+    padding: 8px 15px; 
+    font-size: 16px; 
+    color: #fff;
+    background-color: #E8AF09;
+    border-radius: 5px;
+    text-decoration: none;
+    transition: background-color 0.3s;
+    margin-bottom: 20px; 
+}
+
+.cta-button:hover {
+    background-color: #D79F0E; 
+}
+
+.grid-container {
+    display: flex; 
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.grid-item {
+    flex: 1; 
+    max-width: 23%; 
+    background-color: #fff;
+    padding: 20px; 
+    border: 1px solid #ddd; 
+    border-radius: 8px; 
+    text-align: center; 
+}
+
+.service-image {
+    max-width: 100%; 
+    height: auto; 
+    margin-bottom: 10px; 
+}
+
+/*Contacto*/
+.contacto {
+    position: relative;
+    overflow: hidden;
+    text-align: center;
+}
+
+.video-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    z-index: -1;
+}
+
+.video-background video {
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+}
+
+.contenido {
+    position: relative;
+    color: white;
+    padding: 20px;
+}
+
+h1 {
+    font-size: 70px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    margin-bottom: 0px;
+}
+
+.p-contacto {
+    font-size: 18px;
+    color: #fff;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    padding: 10px;
+    background-color: #333;
+    text-align: center;
+}
+
+span {
+    font-weight: bold;
+}
+
+.banner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding-bottom: 40px;
+}
+
+.banner img {
+    max-width: 50px;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    border-radius: 8px 8px 0 0;
+    padding: 10px;
+}
+
+.banner h2 {
+    font-size: 20px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    margin-bottom: 5px;
+}
+
+.banner p {
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+.banner a {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #E8AF09;
+    border: none;
+    border-radius: 7px;
+    text-decoration: none;
+    outline: none;
+    transition: background-color 0.3s;
+}
+
+.banner a:hover {
+    background-color: #D79F0E;
+}
