--- a/css/style.css
+++ b/css/style.css
@@ -225,14 +225,16 @@ body {
     margin: 120px 0 80px;
     font-family: 'Montserrat', sans-serif;
     color: #333;
+    text-align: center; /* Centra el texto de la sección */
 }
 
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, auto);
-    gap: 20px;
+    grid-template-columns: repeat(3, 1fr); /* Tres columnas */
+    gap: 20px; /* Espacio entre los elementos */
     padding: 20px;
+    max-width: 1200px; /* Ancho máximo del contenedor */
+    margin: 0 auto; /* Centra el contenedor */
 }
 
 .grid-item {
@@ -241,6 +243,7 @@ body {
     border: 1px solid #ddd;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    text-align: center; /* Centra el texto dentro de cada ítem */
 }
 
 .grid-item img {
@@ -251,14 +254,17 @@ body {
     border-radius: 8px 8px 0 0;
 }
 
+.grid-item h3 {
+    margin-top: 10px;
+    font-size: 18px;
+    font-weight: bold;
+}
+
 .grid-item p {
     margin-top: 10px;
     font-size: 14px;
     line-height: 1.5;
-}
-
-.grid-item h3 {
-    padding-top: 10px;
+    color: #666;
 }
 
 .on-page h3,
@@ -269,7 +275,6 @@ body {
 .local h3 {
     padding: 5px;
 }
-
 /* Sección Reviews y Mapa */
 .reviews {
     background-color: #f9f9f9;
@@ -505,7 +510,130 @@ section {
     margin: 0 10px;
 }
 
-/* Servicios */
+.hamburger {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+
+}
+.line {
+    height: 3px;
+    width: 25px;
+    background-color: #333;
+    margin: 3px 0;
+}
+
+#nav-links {
+    display: flex; 
+}
+
+.cerrar {
+    display: none;
+}
+
+/* Responsive styles */
+@media (max-width: 768px) {
+    .header {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .hamburger{
+        display: block;
+    }
+
+    .cerrar {
+        display: block;
+    }
+
+    .nav {
+        display: none;
+    }
+
+    .nav {
+        opacity: 0;
+        visibility: hidden;
+        display: flex;
+        flex-direction: column;
+        align-items: end;
+        gap: 1rem;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #5f5b5b;
+        padding: 2rem;
+        box-shadow: 0 0 0 100vmax rgba(12, 12, 12, 0.5);
+        
+        
+    }
+
+    .nav.visible {
+        opacity: 1;
+        align-items: end;
+    }
+
+
+    .nav ul {
+        flex-direction: column;
+        align-items: end;
+    }
+
+    .nav ul li {
+        margin: 10px 0;
+    }
+
+    .hero .h1 {
+        font-size: 50px;
+    }
+
+    .grid-container {
+        grid-template-columns: 1fr; /* One column on smaller screens */
+    }
+
+    .servicios-home,
+    .h2-seo-lab {
+        font-size: 40px;
+    }
+    
+    .clients-bar img {
+        max-width: 80px; /* Smaller logo on mobile */
+    }
+    
+    .whatsapp-button,
+    .services-button {
+        width: 100%; /* Full-width buttons */
+    }
+}
+
+@media (max-width: 480px) {
+    .hero {
+        padding: 40px 10px;
+    }
+
+    .hero .h1 {
+        font-size: 30px;
+    }
+
+    .grid-item {
+        padding: 15px;
+    }
+
+    .grid-item h3 {
+        font-size: 16px;
+    }
+
+    .grid-item p {
+        font-size: 12px;
+    }
+    
+    .footer {
+        font-size: 14px; 
+    }
+    
+}
+
+/* página Servicios */
 * {
     margin: 0;
     padding: 0;
@@ -789,13 +917,13 @@ body {
     background-color: #D79F0E; 
 }
 
-.grid-container {
+.cta-grid-container {
     display: flex; 
     justify-content: space-between;
     flex-wrap: wrap;
 }
 
-.grid-item {
+.cta-grid-item {
     flex: 1; 
     max-width: 23%; 
     background-color: #fff;
@@ -917,4 +1045,296 @@ span {
 
 .banner a:hover {
     background-color: #D79F0E;
+}
+
+/*Nosotros*/
+.header{
+    padding: 40px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    background-image: url(/imgs/AdobeStock_338389344.jpeg);
+    background-color: #f9f9f9;
+}
+
+.header-top {
+    display: flex;
+    align-items: center; 
+    justify-content: space-between; 
+}
+
+.header-logo {
+    margin-left: 10px; 
+}
+
+.header-icon {
+    width: 50px; 
+    height: auto; 
+
+}
+
+.logo {
+    width: 50px; 
+    height: auto; 
+}
+.header-content {
+    display: flex;
+    justify-content: center; 
+}
+
+.header-item {
+    display: flex;
+    flex-direction: column; 
+    align-items: center; 
+    margin: 0 20px; 
+}
+
+.header-icon {
+    width: 50px; 
+    height: auto; 
+    margin-bottom: 10px; 
+}
+.header-top h1 {
+    margin-top: 40px;
+    margin-right: 20px; 
+}
+
+.header .contact-button {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #E8AF09;
+    border: none;
+    border-radius: 7px;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    margin-top: 20px;
+    margin-bottom: 100px;
+}
+
+.header .contact-button:hover {
+    background-color: #d99708;
+}
+
+.nosotros {
+    padding: 40px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%; 
+    background-color: #333;
+    border-radius: 15px;
+    position: relative; 
+    overflow: hidden; 
+}
+
+.nosotros h2 {
+    font-size: 50px;
+    color: #fff;
+    margin: 0; 
+    position: absolute; 
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    z-index: 2; 
+    text-align: center; 
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    font-weight: bold;
+}
+
+.nosotros img {
+    width: 100%; 
+    height: auto; 
+    opacity: 0.8;
+    border-radius: 15px; 
+    z-index: 1; 
+}
+
+
+.nosotros:before {
+    content: ""; 
+    position: absolute; 
+    top: 0; 
+    left: 0; 
+    right: 0; 
+    bottom: 0; 
+    background-color: rgba(0, 0, 0, 0.5); 
+    z-index: 1; 
+}
+
+/*Team Members*/
+.team-section {
+    padding: 40px 20px;
+    text-align: center; 
+    background-color: #f9f9f9; 
+    background-image: url(/imgs/AdobeStock_338389344.jpeg);
+}
+.team-section h2{
+    margin-bottom: 30px;
+}
+
+.team-container {
+    display: grid; 
+    grid-template-columns: repeat(5, 1fr); 
+    gap: 20px; 
+    margin-top: 20px; 
+}
+
+.team-member {
+    display: flex;
+    flex-direction: column; 
+    align-items: center; 
+}
+
+.member-image {
+    width: 100px; 
+    height: 100px; 
+    border-radius: 50%; 
+    object-fit: cover; 
+    margin-bottom: 10px; 
+}
+
+h3 {
+    font-size: 18px; 
+    color: #333; 
+    margin: 0; 
+    
+}
+
+p {
+    font-size: 14px; 
+    color: #777; 
+    margin: 0; 
+}
+
+.reason-why {
+    padding: 40px 20px; 
+    background-color: #f4f4f4; 
+    border-radius: 15px; 
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
+    max-width: 800px; 
+    margin: 40px auto; 
+    background-image: url(/imgs/AdobeStock_338389344.jpeg);
+    font-family: 'Montserrat', sans-serif; 
+}
+
+.reason-why h2 {
+    font-size: 28px; 
+    color: #333; 
+    text-align: center; 
+    margin-bottom: 20px; 
+}
+
+.reason-why p {
+    font-size: 16px; 
+    line-height: 1.6; 
+    color: #555; 
+    margin-bottom: 15px; 
+    text-align: justify; 
+}
+
+/*Blog*/
+.blog {
+    position: relative; 
+    text-align: center; 
+    margin-bottom: 40px; 
+    padding: 60px 0; 
+}
+
+.video-background {
+    position: absolute; 
+    top: 0;
+    left: 0;
+    width: 100%; 
+    height: 100%; 
+    z-index: -1; 
+    overflow: hidden; 
+}
+
+.video-background video {
+    min-width: 100%; 
+    min-height: 100%; 
+    object-fit: cover; 
+}
+
+.contenido {
+    position: relative; 
+    z-index: 1; 
+    color: white; 
+    padding: 20px; 
+}
+
+.categorias, .articulos {
+    margin: 40px 0; 
+    text-align: center; 
+    
+}
+.articulos h2{
+    margin-bottom: 40px;
+    font-size: 16px;
+}
+
+/* Estilos para el menú de categorías */
+.menu-categorias {
+    list-style: none; 
+    padding: 0; 
+    display: flex; 
+    justify-content: center; 
+    flex-wrap: wrap; 
+    margin-top: 40px;
+}
+
+.menu-categorias li {
+    margin: 0 15px; 
+}
+
+.menu-categorias a {
+    text-decoration: none; 
+    color: #daba05; 
+    font-weight: bold; 
+    transition: color 0.3s; 
+    
+}
+
+.menu-categorias a:hover {
+    color: #b39200; 
+}
+
+/* Estilos para artículos */
+.grid-articulos {
+    display: grid; 
+    grid-template-columns: repeat(3, 1fr); 
+    gap: 20px; 
+    padding: 0 20px; 
+}
+
+.articulo {
+    border: 1px solid #ddd; 
+    padding: 15px; 
+    border-radius: 8px; 
+    background-color: #f9f9f9; 
+    text-align: left; 
+}
+
+.articulo img {
+    max-width: 100%; 
+    border-radius: 8px; 
+}
+
+/* Media Queries para adaptabilidad */
+@media (max-width: 768px) {
+    .grid-articulos {
+        grid-template-columns: repeat(2, 1fr); 
+    }
+}
+
+@media (max-width: 480px) {
+    .grid-articulos {
+        grid-template-columns: 1fr; 
+    }
 }
