--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
 
 .Newsletter p {
     background-color: #E8AF09;
+    
 }
 
 .header {
@@ -32,11 +33,6 @@
     align-items: center;
     width: 90%;
     margin: 0 auto;
-}
-
-/* Estilos del logo */
-.logo img {
-    height: 40px;
 }
 
 /* Estilos del menú */
@@ -65,7 +61,7 @@
 
 /* Estilos del banner hero */
 .hero {
-    background: linear-gradient(rgba(170, 172, 175, 0.50), rgba(170, 172, 175, 0.50)), url(/imgs/team.avif);
+    background: linear-gradient(rgba(170, 172, 175, 0.50), rgba(170, 172, 175, 0.50)), url(../imgs/team.avif);
     background-size: cover;
     background-position: center;
     color: #333;
@@ -117,7 +113,7 @@ body {
     font-size: 16px;
     font-family: 'Montserrat', sans-serif;
     color: #333;
-    background-image: url(/imgs/AdobeStock_338389344.jpeg);
+    background-image: url(../imgs/AdobeStock_338389344.jpeg);
     background-color: rgb(250, 250, 250);
 }
 
@@ -378,7 +374,7 @@ section {
 
 
 .contenedor-forms {
-    background-image: url(/imgs/AdobeStock_540660038.png);
+    background-image: url(../imgs/AdobeStock_540660038.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -397,6 +393,7 @@ section {
     justify-content: center;
     margin-top: 40px;
     margin-bottom: 40px;
+    margin-right: 20%;
 }
 
 .form-register {
@@ -861,6 +858,7 @@ body {
     width: 100%;
 }
 
+
 .services-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -1211,7 +1209,7 @@ h3 {
     
 }
 
-p {
+.p-team {
     font-size: 14px; 
     color: #777; 
     margin: 0; 
