--- a/sass/layout/_reviews-mapa.scss
+++ b/sass/layout/_reviews-mapa.scss
@@ -4,24 +4,22 @@
     text-align: center;
     font-family: 'Montserrat', sans-serif;
     margin: 40px 0;
-  }
-  
-  .reviews-title {
+}
+
+.reviews-title {
     font-size: 36px;
     margin-bottom: 40px;
     color: #333;
-  }
-  
-  .review-grid {
+}
+
+.review-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
     justify-items: center;
-  }
-  
-  .review-item {
-    display: flex;
-    align-items: center;
+}
+
+.review-item {
     background-color: #fff;
     padding: 20px;
     border: 1px solid #ddd;
@@ -29,32 +27,34 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     max-width: 500px;
     margin: 0 auto;
-  
-    img {
-      width: 80px;
-      height: 80px;
-      border-radius: 50%;
-      object-fit: cover;
-      margin-right: 20px; // Espacio entre la imagen y el texto
-    }
-  
-    p {
-      font-size: 16px;
-      color: #333;
-      margin-bottom: 10px;
-      line-height: 1.5;
-      text-align: right;
-      flex-grow: 1;
-    }
-  }
-  
-  .review-item h3 {
+    display: flex;
+    align-items: center; 
+}
+
+.review-item img {
+    max-width: 100px; 
+    height: auto;
+    margin-right: 20px; 
+}
+
+.review-item-content {
+    text-align: left; 
+}
+
+.review-item p {
+    font-size: 16px;
+    color: #333;
+    margin-bottom: 10px;
+    line-height: 1.5;
+}
+
+.review-item h3 {
     font-size: 18px;
     color: #E8AF09;
     margin-top: 0;
     font-weight: bold;
-    text-align: right;
-  }
+}
+
   
   /* Mapa */
   body,
