--- a/sass/layout/_servicios.scss
+++ b/sass/layout/_servicios.scss
@@ -3,16 +3,16 @@
     margin: 120px 0 80px;
     font-family: 'Montserrat', sans-serif;
     color: #333;
-    text-align: center; /* Centra el texto de la sección */
+    text-align: center; 
   }
   
   .grid-container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); /* Tres columnas */
-    gap: 20px; /* Espacio entre los elementos */
+    grid-template-columns: repeat(3, 1fr); 
+    gap: 20px; 
     padding: 20px;
-    max-width: 1200px; /* Ancho máximo del contenedor */
-    margin: 0 auto; /* Centra el contenedor */
+    max-width: 1200px; 
+    margin: 0 auto; 
   }
   
   .grid-item {
@@ -21,7 +21,7 @@
     border: 1px solid #ddd;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    text-align: center; /* Centra el texto dentro de cada ítem */
+    text-align: center; 
     
     img {
       max-width: 50px;
