--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,6 +9,7 @@
 @import "./layout/contacto.scss";
 @import "./layout/nosotros.scss";
 @import "./layout/blog.scss";
+@import "./components/botones.scss";
 
 
 
