--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,4 @@
 @charset "UTF-8";
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px 0;
-  background-color: white;
-}
-
 .Newsletter {
   background-color: #E8AF09;
   text-align: center;
@@ -18,6 +10,14 @@
   background-color: #E8AF09;
 }
 
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 0;
+  background-color: white;
+}
+
 .container {
   display: flex;
   justify-content: space-between;
@@ -26,6 +26,9 @@
   margin: 0 auto;
 }
 
+.nav {
+  margin-left: auto;
+}
 .nav ul {
   list-style: none;
   display: flex;
