--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,20 +1,22 @@
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px 0;
-  background-color: white;
-}
 .Newsletter {
   background-color: #E8AF09;
   text-align: center;
   font-size: 14px;
   padding: 1%;
   padding-bottom: 0.1%;
+}
+
+.Newsletter p {
+  background-color: #E8AF09;
   
-  p {
-    background-color: #E8AF09;
-  }
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 0;
+  background-color: white;
 }
 
 .container {
@@ -24,32 +26,32 @@
   width: 90%;
   margin: 0 auto;
 }
-.nav {
-  ul {
-    list-style: none;
-    display: flex;
-    gap: 20px;
-    
-    li {
-      display: flex;
-      align-items: center;
-      
-      a {
-        text-decoration: none;
-        color: #333;
-        font-size: 16px;
-        font-weight: bold;
-        transition: color 0.3s;
-        
-        &:hover {
-          color: #E8AF09;
-          
-        }
-      }
-    }
-  }
+
+/* Estilos del menú */
+.nav ul {
+  list-style: none;
+  display: flex;
+  gap: 20px;
 }
-// Estilos del banner hero
+
+.nav ul li {
+  display: flex;
+  align-items: center;
+}
+
+.nav ul li a {
+  text-decoration: none;
+  color: #333;
+  font-size: 16px;
+  font-weight: bold;
+  transition: color 0.3s;
+}
+
+.nav ul li a:hover {
+  color: #E8AF09;
+}
+
+/* Estilos del banner hero */
 .hero {
   background: linear-gradient(rgba(170, 172, 175, 0.50), rgba(170, 172, 175, 0.50)), url(../imgs/team.avif);
   background-size: cover;
@@ -62,15 +64,458 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
-  .wrapper {
-    margin-bottom: 20px;
-  }
-
-  .h1 {
-    font-size: 70px;
-    color: #333;
-    line-height: 1.2;
-  }
 }
 
+.hero .wrapper {
+  margin-bottom: 20px;
+}
+
+.hero .h1 {
+  font-size: 70px;
+  color: #333;
+  line-height: 1.2;
+}
+
+/* Botón de WhatsApp */
+.whatsapp-button {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 18px;
+  color: #fff;
+  background-color: #E8AF09;
+  border: none;
+  border-radius: 7px;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+  outline: none;
+}
+
+.whatsapp-button:focus,
+.whatsapp-button:active {
+  outline: none;
+  box-shadow: none;
+}
+
+.whatsapp-button:hover {
+  background-color: #E8AF09;
+}
+
+/* Sección SEO LAB */
+body {
+  font-size: 16px;
+  font-family: 'Montserrat', sans-serif;
+  color: #333;
+  background-image: url(../imgs/AdobeStock_338389344.jpeg);
+  background-color: rgb(250, 250, 250);
+}
+
+.text-box {
+  margin: 20px;
+}
+
+.h2-seo-lab {
+  font-size: 70px;
+  color: #333;
+  line-height: 1.2;
+  padding-top: 50px;
+}
+
+.p1 {
+  justify-content: space-around;
+  padding-bottom: 16px;
+}
+
+.p2 {
+  justify-content: space-around;
+  padding-bottom: 50px;
+}
+
+.img-container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.img-banner {
+  width: 100%;
+  height: auto;
+}
+
+.services-button {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 18px;
+  color: #fff;
+  background-color: #E8AF09;
+  border: none;
+  border-radius: 7px;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+  outline: none;
+}
+
+.custom-separator {
+  width: 100%;
+  margin: 20px auto;
+  border: 0;
+  border-top: 2px solid #E8AF09;
+}
+
+/* Sección Marcas */
+.marcas {
+  font-size: 16px;
+  font-family: 'Montserrat', sans-serif;
+  color: #333;
+}
+
+.h3-marcas {
+  color: #333;
+  padding-top: 50px;
+}
+
+.wrapper {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.gallery,
+.marcas,
+.contacto {
+  font-size: 50px;
+  color: #333;
+  text-align: center;
+  padding: 0;
+  line-height: 4;
+}
+
+.clients-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  padding: 10px;
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.clients-bar img {
+  max-width: 100px;
+  max-height: 100px;
+  width: 100%;
+  object-fit: contain;
+}
+
+/* Sección Servicios */
+.servicios-home {
+  font-size: 70px;
+  margin: 120px 0 80px;
+  font-family: 'Montserrat', sans-serif;
+  color: #333;
+  text-align: center; /* Centra el texto de la sección */
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* Tres columnas */
+  gap: 20px; /* Espacio entre los elementos */
+  padding: 20px;
+  max-width: 1200px; /* Ancho máximo del contenedor */
+  margin: 0 auto; /* Centra el contenedor */
+}
+
+.grid-item {
+  background-color: #fff;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  text-align: center; /* Centra el texto dentro de cada ítem */
+}
+
+.grid-item img {
+  max-width: 50px;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+  border-radius: 8px 8px 0 0;
+}
+
+.grid-item h3 {
+  margin-top: 10px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.grid-item p {
+  margin-top: 10px;
+  font-size: 14px;
+  line-height: 1.5;
+  color: #666;
+}
+
+.on-page h3,
+.audit h3,
+.seo-content h3,
+.off-page h3,
+.tecnico h3,
+.local h3 {
+  padding: 5px;
+}
+/* Sección Reviews y Mapa */
+.reviews {
+  background-color: #f9f9f9;
+  padding: 40px 20px;
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  margin: 40px 0;
+}
+
+.reviews-title {
+  font-size: 36px;
+  margin-bottom: 40px;
+  color: #333;
+}
+
+.review-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+  justify-items: center;
+}
+
+.review-item {
+  background-color: #fff;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+.review-item p {
+  font-size: 16px;
+  color: #333;
+  margin-bottom: 10px;
+  line-height: 1.5;
+}
+
+.review-item h3 {
+  font-size: 18px;
+  color: #E8AF09;
+  margin-top: 0;
+  font-weight: bold;
+}
+
+/* Mapa */
+body,
+html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+}
+
+section {
+  display: flex;
+  flex-direction: column;
+}
+
+/* Sección Encuéntranos */
+.encuentranos {
+  font-size: 70px;
+  margin: 95px 0 80px;
+  text-align: center;
+}
+
+.mapouter {
+  position: relative;
+  text-align: right;
+  height: 80vh;
+  width: 100%;
+  display: flex;
+}
+
+.gmap_canvas {
+  overflow: hidden;
+  background: none !important;
+  height: 100%;
+  width: 100%;
+}
+
+#gmap_canvas {
+  height: 100%;
+  width: 100%;
+  border: 0;
+}
+
+/* Formulario y Footer */
+.main {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 20px;
+  padding: 20px;
+}
+
+
+.contenedor-forms {
+  background-image: url(../imgs/AdobeStock_540660038.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+}
+
+.contenedor-forms h2 {
+  font-size: 70px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  margin-right: 20%;
+}
+
+.form-register {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-top: 40px;
+  gap: 10px;
+  background-color: #f9f9f9;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  width: 400px;
+  margin: 0;
+}
+
+.controls {
+  padding: 10px;
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.controls:focus {
+  border-color: #E8AF09;
+  outline: none;
+}
+
+.submit {
+  background-color: #E8AF09;
+  color: white;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.submit:hover {
+  background-color: #D79F0E;
+}
+
+.form-register {
+  width: 400px;
+  background-color: whitesmoke;
+  padding: 40px;
+  margin: auto;
+  border-radius: 4px;
+}
+
+/*footer*/
+.footer {
+  background-color: #333;
+  color: white;
+  padding: 20px;
+
+}
+
+.footer-content {
+  max-width: 1200px;
+  margin: 0 auto;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer-logo {
+  align-self: flex-start;
+  margin-bottom: 10px;
+}
+
+.footer-menu {
+  margin: 20px 0;
+  align-self: flex-end;
+
+}
+
+.footer-menu ul {
+  list-style-type: none;
+  padding: 0;
+  text-align: right;
+
+}
+
+.footer-menu li {
+  margin: 5px 0;
+
+}
+
+.footer-designed {
+  font-size: 14px;
+  margin: 10px 0;
+}
+
+.footer p {
+  margin: 10px 0;
+}
+
+.footer a {
+  color: #E8AF09;
+  text-decoration: none;
+}
+
+.footer a:hover {
+  text-decoration: underline;
+}
+
+.social-media {
+  margin: 15px 0;
+  align-self: flex-end;
+}
+
+.social-media a {
+  margin: 0 10px;
+}
+
+.hamburger {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+
+}
+.line {
+  height: 3px;
+  width: 25px;
+  background-color: #333;
+  margin: 3px 0;
+}
+
+#nav-links {
+  display: flex; 
+}
+
+.cerrar {
+  display: none;
+}
