--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,15 +1,11 @@
-@import "./layout/header.scss";
-@import "./layout/footer.scss";
-@import "./layout/seo-lab.scss";
-@import "./layout/marcas.scss";
+@import "./layout/home.scss";
 @import "./layout/servicios.scss";
-@import "./layout/reviews-mapa.scss";
 @import "./base/reset.scss";
-@import "./layout/seccion-servicios.scss";
 @import "./layout/contacto.scss";
 @import "./layout/nosotros.scss";
 @import "./layout/blog.scss";
 @import "./components/botones.scss";
+@import "./mediaqueries/media-queries";
 
 
 
