--- a/sass/layout/_home.scss
+++ b/sass/layout/_home.scss
@@ -21,12 +21,12 @@
 
 .header {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 20px 0;
     background-color: white;
+    padding: 20px 0;
 }
 
+// Contenedor principal
 .container {
     display: flex;
     justify-content: space-between;
@@ -453,27 +453,33 @@ section {
     background-color: #333;
     color: white;
     padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
     .footer-content {
         max-width: 1200px;
         margin: 0 auto;
+        display: flex;
         flex-direction: column;
         align-items: center;
+        width: 100%;
     }
 
     .footer-logo {
-        align-self: flex-start;
-        margin-bottom: 10px;
+        flex: 1;
+        display: flex;
     }
 
     .footer-menu {
-        margin: 20px 0;
-        align-self: flex-end;
+        flex: 2;
+        display: flex;
+        justify-content: center;
 
         ul {
             list-style-type: none;
             padding: 0;
-            text-align: right;
+            text-align: center;
 
             li {
                 margin: 5px 0;
@@ -484,6 +490,7 @@ section {
     .footer-designed {
         font-size: 14px;
         margin: 10px 0;
+        text-align: center;
     }
 
     p {
@@ -502,7 +509,7 @@ section {
 
 .social-media {
     margin: 15px 0;
-    align-self: flex-end;
+    text-align: center;
 
     a {
         margin: 0 10px;
@@ -529,4 +536,5 @@ section {
 .cerrar {
     display: none;
 }
+
 
