--- a/sass/mediaqueries/_media-queries.scss
+++ b/sass/mediaqueries/_media-queries.scss
@@ -327,3 +327,55 @@
       grid-template-columns: 1fr; 
   }
 }
+
+/*Forms*/
+@media (max-width: 1200px) {
+    .main {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media (max-width: 768px) {
+    .main {
+        padding: 15px;
+        gap: 15px;
+    }
+
+    .contenedor-forms {
+        padding: 15px;
+
+        h2 {
+            font-size: 50px;
+            margin-right: 10%;
+        }
+    }
+
+    .form-register {
+        width: 300px;
+        padding: 15px;
+    }
+}
+
+@media (max-width: 480px) {
+    .main {
+        padding: 10px;
+        gap: 10px;
+    }
+
+    .contenedor-forms {
+        padding: 10px;
+
+        h2 {
+            font-size: 30px;
+            margin-right: 0;
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
+    }
+
+    .form-register {
+        width: 100%;
+        padding: 10px;
+        align-items: center;
+    }
+}
